create and stylize page layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
         <meta charset="utf-8">
         <title>Technovation</title>
         <link rel="stylesheet" href="css/libs/oj/v3.2.0/alta/oj-alta-min.css" type="text/css"/>
+        <link rel="stylesheet" href="css/style.css" type="text/css"/>
         <script data-main="js/main" src="js/libs/require/require.js"></script>
     </head>
     <body>
-       <div data-bind="text: message"></div>
+        <main>
+            <header>
+                <img class="logo" src="assets/logo.svg">
+                <div class="today-date">
+                    <i class="icon icon-calendar"></i>
+                    <span>10/10/2017</span>
+                </div>
+            </header>
+            <article>
+            </article>
+        </main>
     </body>
 </html>
