add MomentJS library through a CDN

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Technovation</title>
         <link rel="stylesheet" href="css/libs/oj/v3.2.0/alta/oj-alta-min.css" type="text/css"/>
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
         <script data-main="js/main" src="js/libs/require/require.js"></script>
     </head>
     <body>
