add "registrations" module and render it on index.html
registrations module is the one that shows the registrations table and all of its info, it's its responsability also to fetch all data from the API

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 </div>
             </header>
             <article>
+                <div data-bind="ojModule: { name: 'registrations'}"></div>
             </article>
         </main>
     </body>
